# dictgen

./: LICENSE  README.md  fuzz_dictgen.py  fuzz_tomlkit.py  setup.cfg
examples/: fuzz_tomlkit.py
src/dictgen/: __init__.py  generate.py  utils.py
tests/: test_generate.py
