[metadata]
name = dictgen
url = https://github.com/sg3-141-592/dictgen
author = Sean @ CompactCloud
author_email = sean@compactcloud.co.uk
license=MIT
long_description = file: README.md
long_description_content_type=text/markdown
description=Customisable random dictionary generator for fuzz testing
version = 0.1
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src